--- a/src/components/AppHeader/Header.scss
+++ b/src/components/AppHeader/Header.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-evenly;
   border-bottom: 0.1px solid lightgray;
+  background-color: #fff;
   padding: 10px 0;
   width: 100%;
   z-index: 999;
