--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -18,7 +18,6 @@
     padding-bottom: 10px;
 
     img {
-      margin-bottom: -20px;
       width: 100%;
       height: 60px;
       border-top-left-radius: 10px;
@@ -27,8 +26,15 @@
     }
 
     .sidebar__avatar {
-      margin-bottom: 10px;
+      margin-bottom: -10px;
       font-size: 1.5vw;
+      position: relative;
+      bottom: 20px;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
 
     h4 {
