--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,10 +1,10 @@
 .login {
+  height: 100vh;
+  background-color: #f3f2ef;
   display: grid;
   place-items: center;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 100px;
-  padding-bottom: 100px;
 
   img {
     object-fit: contain;
