--- a/src/App.scss
+++ b/src/App.scss
@@ -2,10 +2,12 @@
   background-color: #f3f2ef;
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   .app__body {
     display: flex;
     margin: 35px 20px 0 20px;
+    min-width: 85%;
     max-width: 1200px;
   }
 }
