--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,6 +3,7 @@
   top: 0;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   border-bottom: 0.1px solid lightgray;
   background-color: #fff;
   padding: 10px 0;
@@ -13,13 +14,18 @@
     display: flex;
 
     .header__search {
-      padding: 10px;
+      padding: 5px;
       display: flex;
       align-items: center;
       border-radius: 5px;
-      height: 22px;
+      height: 24px;
       color: gray;
       background-color: #eef3f8;
+      width: 250px;
+
+      .MuiSvgIcon-root {
+        font-size: 20px;
+      }
 
       input {
         outline: none;
@@ -30,7 +36,7 @@
 
     img {
       object-fit: contain;
-      height: 40px;
+      height: 34px;
       margin-right: 10px;
     }
   }
